# burn

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
crates/burn-remote/: Cargo.toml
first_conv/: Cargo.toml
first_conv/src/: main.rs  model.rs
guide/: Cargo.toml
guide/src/: data.rs  main.rs  model.rs  training.rs
my_app/: Cargo.toml
my_app/src/: main.rs
my_detection/: Cargo.toml
my_detection/src/: data.rs  main.rs  model.rs
