[package]
name = "my_detection"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
burn = { path = "../crates/burn",features = ["train", "wgpu", "vision", "dataset"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
tempfile = "3.8"
[dev-dependencies]
tempfile = "3.8"
